# slackbuilds

./: .aaa_elflibs.lst.un~  .gitignore  ChangeLog.All  ChangeLog.All.1  ChangeLog.All.2  KDE.options  README  REPLACEMENTS  SWITCHES  SlackBuild.sample  SlackBuild.sample.c32  SlackBuild.sample.cmake  SlackBuild.sample.kde  SlackBuild.sample.kde3  SlackBuild.sample.kde4  SlackBuild.sample.kf5  SlackBuild.sample.kmod  SlackBuild.sample.prl  SlackBuild.sample.py3  SlackBuild.sample.python  SlackBuild.sample.qt4  SlackBuild.sample.qt5  SlackBuild.sample.ruby  SlackBuild.sample.snap  aaa.ssss  aaa_elflibs.lst  fake-aaa_elflibs.sh  fedora-cvs.sh  fedora-dist.sh  index.html  kde-autoconf-snapshot.sh  qt4.options  qt5.options  rc.sample  setup.onlyonce.rcsample  slack-desc.sample  snapshot-git.sh
2mandvd/: .gitignore  2mandvd.SlackBuild  ChangeLog.SB  apply-patches.sh  slack-desc  slack-required
_pasture/: .gitignore  README
a2ps/: .gitignore  ChangeLog.SB  a2ps.SlackBuild  apply-patches.sh  slack-desc  slack-required
a52dec/: .gitignore  ChangeLog.SB  a52dec-compat32.SlackBuild  a52dec.SlackBuild  apply-patches.sh  slack-desc  slack-desc-compat32  slack-required
aaa_base-chinfo/: ChangeLog.SB  Chinforinfula  aaa_base-chinfo.SlackBuild  chinforinfula-version  slack-desc  slack-required
aacgain/: .gitignore  ChangeLog.SB  aacgain.SlackBuild  slack-desc
aacskeys/: ChangeLog.SB  aacskeys.SlackBuild  slack-desc  slack-required
aalib/: .gitignore  ChangeLog.SB  aalib.SlackBuild  apply-patches.sh  slack-desc  slack-required
abi-compliance-checker/: ChangeLog.SB  abi-compliance-checker.SlackBuild  slack-desc  slack-required
abi-dumper/: ChangeLog.SB  abi-dumper.SlackBuild  slack-desc  slack-required
abiword/: .gitignore  ChangeLog.SB  abiword.SlackBuild  apply-patches.sh  slack-desc  slack-required
acct/: .gitignore  ChangeLog.SB  acct.SlackBuild  apply-patches.sh  slack-desc
acetoneiso/: .gitignore  ChangeLog.SB  acetoneiso.SlackBuild  slack-desc  slack-required
ack/: .gitignore  ChangeLog.SB  ack.SlackBuild  slack-desc  slack-required
acl/: .gitignore  ChangeLog.SB  acl-compat32.SlackBuild  acl.SlackBuild  apply-patches.sh  slack-desc  slack-desc-compat32  slack-required
acpi/: ChangeLog.SB  acpi.SlackBuild  slack-desc
acpid/: .gitignore  ChangeLog.SB  acpid.SlackBuild  acpid.service  apply-patches.sh  rc.acpid  slack-desc
acpitool/: ChangeLog.SB  acpitool.SlackBuild  slack-desc
adns/: .gitignore  ChangeLog.SB  adns.SlackBuild  slack-desc
adobereader/: ChangeLog.SB  adobereader.SlackBuild  slack-desc.plugin  slack-required
advancecomp/: ChangeLog.SB  advancecomp.SlackBuild  slack-desc  slack-required
adzapper/: ChangeLog.SB  adzapper.SlackBuild  apply-patches.sh  (+1 more)
chinfo-extramimetypes/chinfo-extramimetypes/: CMakeLists.txt  ChangeLog  Makefile  chinfo-extramimetypes.spec
chinfo-extramimetypes/chinfo-extramimetypes/SlackBuild/: slack-required
chinfo-extramimetypes/chinfo-extramimetypes/application/: x-bin.desktop  x-c2d.desktop  x-img.desktop  x-lzma.desktop  x-ofs.desktop  x-slackbuild.desktop
chinfo-extramimetypes/chinfo-extramimetypes/audio/: x-dsf.desktop  x-gsf.desktop  x-gym.desktop  x-nsf.desktop  x-pac.desktop  x-psf.desktop  x-qsf.desktop  x-spc.desktop
chinfo-extramimetypes/chinfo-extramimetypes/hidden/: geany-hash.desktop  gimp-ico.desktop
chinfo-extramimetypes/chinfo-extramimetypes/legacy/: CMakeLists.txt
chinfo-extramimetypes/chinfo-extramimetypes/legacy/application/: CMakeLists.txt  x-b6t.desktop  x-c2d.desktop  x-ccd.desktop  x-cdi.desktop  x-daa.desktop  x-la.desktop  x-mdf.desktop  x-mds.desktop  x-nrg.desktop  x-xz-compressed-tar.desktop
chinfo-extramimetypes/chinfo-extramimetypes/legacy/audio/: CMakeLists.txt  x-2sf.desktop  x-bonk.desktop  x-mac.desktop  x-spc.desktop  x-ssf.desktop  x-tta.desktop  x-usf.desktop  x-wavpack-correction.desktop  x-wavpack.desktop
chinfo-extramimetypes/chinfo-extramimetypes/legacy/hidden/: kwrite-desktop.desktop  kwrite-hash.desktop  kwrite-php.desktop  kwrite-xgettext.desktop  mozilla-firefox-maf.desktop
chinfo-extramimetypes/chinfo-extramimetypes/legacy/text/: CMakeLists.txt  md5.desktop  md6.desktop  sha1.desktop  sha384.desktop
chinfo-extramimetypes/chinfo-extramimetypes/legacy/video/: CMakeLists.txt  x-flv.desktop
chinfo-extramimetypes/chinfo-extramimetypes/smi/: CMakeLists.txt  chinfo-extramimetypes-cdimage.xml  chinfo-extramimetypes-gm.xml  chinfo-extramimetypes-hash.xml  chinfo-extramimetypes-maf.xml  chinfo-extramimetypes-slackbuild.xml  chinfo-extramimetypes.xml
chinfo-extramimetypes/chinfo-extramimetypes/text/: sha224.desktop  sha256.desktop  sha384.desktop  sha512.desktop
fluxbox-chinfo-menu/fluxbox-chinfo-menu/: CMakeLists.txt  ChangeLog  Makefile  README  update-translations.sh
fluxbox-chinfo-menu/fluxbox-chinfo-menu/po/: CMakeLists.txt  LINGUAS  pt.po  pt_BR.po
fluxbox-chinfo-menu/fluxbox-chinfo-menu/share/: CMakeLists.txt  fluxbox-chinfo-en  fluxbox-chinfo-menuconfig  fluxbox-chinfo-pt  fluxbox-chinfo-pt_BR  fluxbox-chinfo-xdg-menu
kde-apps/konqinfohelper/konqinfohelper/: CMakeLists.txt  ChangeLog  Makefile  README
kde-apps/konqinfohelper/konqinfohelper/servicemenus/: CMakeLists.txt  aviinfo.desktop  aviinfo.desktop.cmake  gifinfo.desktop  gifinfo.desktop.cmake  jpginfo.desktop  jpginfo.desktop.cmake  m4ainfo.desktop  m4ainfo.desktop.cmake  mkvinfo.desktop  mkvinfo.desktop.cmake  mp3info.desktop  mp3info.desktop.cmake  mpginfo.desktop  mpginfo.desktop.cmake  ogginfo.desktop  ogginfo.desktop.cmake  pdfkinfo.desktop  pdfkinfo.desktop.cmake  pnginfo.desktop  pnginfo.desktop.cmake  tgainfo.desktop  tgainfo.desktop.cmake  torrentinfo.desktop  torrentinfo.desktop.cmake  wavinfo.desktop  wavinfo.desktop.cmake
systemd-chinfo-units/systemd-chinfo-units/: CMakeLists.txt  display-manager.service  inet1.service  network.service  slackware-depmod  slackware-depmod.service.cmake  slackware-lvm-init  slackware-lvm-init.service  slackware-lvm-init.service.cmake  slackware-motd  slackware-motd.service.cmake  systemd-clean-dead-links  systemd-clean-dead-links.service.cmake
(+31318 files in other folders)
